# devshells

./: .gitattributes
.scripts/: update
basic-python/: flake.nix
bevy/: Cargo.toml  flake.nix  rust-toolchain.toml
bevy/.cargo/: config.toml
books/: flake.nix
c/: flake.nix
clang-cpp/: flake.nix
drasi/: flake.nix
embedded-rust/: flake.nix  toolchain.toml
gitignore/: .gitignore
java/: flake.nix
python/: flake.nix
rust/: flake.nix
rust-embedded/: flake.nix
teradata-oracle-flask/: flake.nix  pyrightconfig.json  teradata-jdbc-20.tar
